# 3DSolve

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
3DSolve_Model/: 3DSolve_Model.cpp  3DSolve_Model.h  CMakeLists.txt  README.md  main.cpp
3DSolve_Model/headers/entities/geometry/: Cell.hpp  Domain.hpp  Geometry.hpp  Grid.hpp  PackDomain.hpp  Plane.hpp
3DSolve_Model/headers/entities/physical/: 3D_object.hpp  Pack.hpp  Pallet.hpp  PalletGroup.hpp
3DSolve_Model/headers/logic/LetturaJson/: letturaFileJson.hpp
3DSolve_Model/headers/logic/MainMethods/: fitIntoPallet.hpp  messages.hpp  test.hpp
3DSolve_Model/headers/logic/OrdinamentoPacchi/: ordinamentoPacchi.hpp  quickSort.hpp
3DSolve_Model/src/entities/geometry/: Domain.cpp  Geometry.cpp  Grid.cpp  PackDomain.cpp  Plane.cpp
3DSolve_Model/src/entities/physical/: 3D_object.cpp  Pack.cpp  Pallet.cpp  PalletGroup.cpp
3DSolve_Model/src/logic/LetturaJson/: letturaFileJson.cpp
3DSolve_Model/src/logic/mainMethods/: fitIntoPallet.cpp  messages.cpp  test.cpp
3DSolve_Model/src/logic/ordinamentoPacchi/: ordinamentoPacchi.cpp  quickSort.cpp
3DSolve_QtView/: 3DSolve_QtView.sln  CMakeLists.txt  DSolve_QtView.cpp  DSolve_QtView.ui
3DSolve_QtView/3DSolve_QtView/: 3DSolve_QtView.vcxproj  3DSolve_QtView.vcxproj.filters  DSolve_QtView.h  DSolve_QtView.qrc  DSolve_QtView.ui  main.cpp
QML_View/: CMakeLists.txt  QML_View.qmlproject  QML_View.qmlproject.qtds  qds.cmake
QML_View-Debug/: .ninja_deps  .ninja_log  build.ninja  qtcsettings.cmake
QML_View-Debug/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
QML_View-Debug/.qt/deploy_qml_imports/: QML_ViewApp.cmake
QML_View-Debug/.qt/qml_imports/: QML_ViewApp_build.cmake
QML_View-Debug/.qt/rcc/: configuration.qrc
QML_View-Debug/.rcc/qmlcache/: all_aotstats.aotstatslist
QML_View-Debug/QML_View/: QML_Viewplugin_QML_ViewPlugin.cpp  QML_Viewplugin_QML_ViewPlugin_in.cpp  QML_Viewplugin_init.cpp  qml_view_qmltyperegistrations.cpp
QML_View-Debug/QML_View/.qt/rcc/: QML_View_raw_qml_0.qrc  qmake_QML_View.qrc
QML_View-Debug/QML_View/.rcc/qmlcache/: QML_View_Constants_qml.cpp  QML_View_Constants_qml.cpp.aotstats  (+5 more)
QML_View-Debug/QML_View/QML_View_autogen/: deps
QML_View-Debug/QML_View/QML_Viewplugin_autogen/: deps
QML_View-Debug/QML_View/QML_Viewplugin_init_autogen/: deps
QML_View-Debug/QML_View/qmltypes/: QML_View_foreign_types.txt
QML_View-Debug/QML_ViewApp_autogen/: deps
QML_View-Debug/QML_ViewContent/: QML_ViewContentplugin_QML_ViewContentPlugin.cpp  QML_ViewContentplugin_QML_ViewContentPlugin_in.cpp  QML_ViewContentplugin_init.cpp  qml_viewcontent_qmltyperegistrations.cpp
QML_View-Debug/QML_ViewContent/QML_ViewContent_autogen/: deps
QML_View-Debug/QML_ViewContent/QML_ViewContentplugin_autogen/: deps
QML_View-Debug/QML_ViewContent/QML_ViewContentplugin_init_autogen/: deps
QML_View-Debug/qml/FlowView/: FlowView_qml_module_dir_map.qrc
QML_View-Debug/qml/QML_View/: Constants.qml  QML_View_qml_module_dir_map.qrc  qmldir
QML_View-Debug/qml/QML_ViewContent/: App.qml  QML_ViewContent_qml_module_dir_map.qrc  Screen01.ui.qml  qmldir
QML_View/App/: main.cpp
QML_View/App/autogen/: environment.h
QML_View/QML_View/: CMakeLists.txt  qmldir
QML_View/QML_View/designer/: plugin.metainfo
QML_View/QML_ViewContent/: CMakeLists.txt  Screen01.ui.qml
common/test_inputs/: inputPackListSample.json  input_for_model.json  test1_input_for_model.json  test2_input_for_model.json  test4_input_for_model.json
docs/: README.md
docs/.obsidian/: graph.json  workspace.json
docs/Architecture/: Relations.canvas  main.cpp.md
(+243 files in other folders)
