# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("3DSolve")

set(CMAKE_BINARY_DIR ${PROJECT_SOURCE_DIR}/3DSolve_Model/build)

# Add main.cpp as an executable target
add_executable(3DSolve_Model ${PROJECT_SOURCE_DIR}/3DSolve_Model/main.cpp)

# Include sub-projects.
add_subdirectory ("3DSolve_Model")

